--- a/mainScreen.html
+++ b/mainScreen.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Luckitea<sup>&reg;</sup></h1>
+      <h1>Luckitea<!--<sup>&reg;</sup>--></h1>
 
       <!-- Navigation elements -->
       <nav>
@@ -53,7 +53,7 @@
       </div>
 
       <br />
- 
+      
       <div>
         <table>
           <tr>
