Done until future ideas and pictures come.

--- a/index.html
+++ b/index.html
@@ -2,19 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luckitea HTML</title>
-    <!--link rel="icon" href="favicon.ico" />-->
   </head>
   <body>
-    <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Luckitea<!--<sup>&reg;</sup>--></h1>
+      <h1>Luckitea</h1>
 
-      <!-- Navigation elements -->
       <nav>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu>
           <li><a href="index.html">Home</a></li>
            <li><a href="mainScreen.html">Try Your Luck</a></li>
@@ -23,16 +18,15 @@
         </menu>
       </nav>
 
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
-      <hr /> <!--self contained element -->
+      <hr /> 
     </header>
 
     <main>
       <h1>Login</h1>
       <form method="get" action="play.html">
         <div>
-          <span>@</span>
-          <input type="text" placeholder="your@email.com" />
+          <span>Email</span>
+          <input type="text" placeholder="123@email.com" />
         </div>
         <div>
           <span>🔒</span>
