--- a/mainScreen.html
+++ b/mainScreen.html
@@ -2,19 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luckitea</title>
-    <!--<link rel="icon" href="favicon.ico" />-->
+    <title>Luckitea HTML</title>
   </head>
   <body>
-    <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Luckitea<!--<sup>&reg;</sup>--></h1>
+      <h1>Luckitea</h1>
 
-      <!-- Navigation elements -->
       <nav>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu>
           <li><a href="index.html">Home</a></li>
            <li><a href="mainScreen.html">Try Your Luck</a></li>
@@ -22,35 +17,31 @@
           <li><a href="about.html">Info</a></li> 
         </menu>
       </nav>
-
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
-      <hr />
-    </header>
-
-    <main>
-      <div class="players">
-        Player:
-        <span class="player-name">Mystery player</span>
-      </div>
-      <ul class="notification">
-        <li class="player-name">Tim started a new game</li>
-        <li class="player-name">Ada started a new game</li>
-        <li class="player-name">Tim scored 337</li>
-      </ul>
-
-      <!-- More formatting with old style HTML -->
-      <br />
-
       <div>
-        <label for="count">Score</label>
+        <div>
+        <span class="player-name">Current User</span>
+        </div>
+        <label for="count">luck</label>
         <input type="text" id="count" value="--" readonly />
       </div>
 
+      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
+      <hr />
+      
+    </header>
+
+    <main>
+
+      <ul class="notification">
+        <li class="player-name">Player 1 is trying their luck</li>
+        <li class="player-name">Player 2 is trying their luck</li>
+        <li class="player-name">Player 1 - luck: +10</li>
+      </ul>
+
       <br />
 
-      <div>
-        <button>Reset</button>
-      </div>
+
+      <br />
 
       <br />
       
@@ -60,36 +51,20 @@
             <td>
               <button>
                 <!-- <img src=""> -->
-                <svg aria-hidden="true" viewBox="0 0 100 100" height="100" width="100">
-                  <!-- SVG
-                    M move <to x,y>
-                    Q quadratic curve <control point x,y> <to x,y>
-                -->
-                  <path d="M 95,5 95,95 5,95 Q 5,5 95,5" fill="green" />
+                <!--I'm planning on drawing some cups to go here for buttons to press-->
                 </svg>
               </button>
             </td>
             <td>
               <button>
-                <svg aria-hidden="true" viewBox="0 0 100 100" height="100" width="100">
-                  <path d="M5,5 5,95 95,95 Q 95,5 5,5" fill="red" />
-                </svg>
-              </button>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <button>
-                <svg aria-hidden="true" viewBox="0 0 100 100" height="100" width="100">
-                  <path d="M5,5 95,5 95,95 Q 5,95 5,5" fill="blue" />
-                </svg>
+                <!-- <img src=""> -->
+                <!--I'm planning on drawing some cups to go here for buttons to press-->
               </button>
             </td>
             <td>
               <button>
-                <svg aria-hidden="true" viewBox="0 0 100 100" height="100" width="100">
-                  <path d="M95,5 5,5 5,95 Q 95,95 95,5" fill="yellow" />
-                </svg>
+                <!-- <img src=""> -->
+                <!--I'm planning on drawing some cups to go here for buttons to press-->
               </button>
             </td>
           </tr>
