--- a/info.html
+++ b/info.html
@@ -2,23 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luckitea HTML</title>
-    <!--link rel="icon" href="favicon.ico" />-->
   </head>
   <body>
-    <!-- Use header, main, and footer elements to give semantic structure -->
     <header>
-      <h1>Luckitea<!--<sup>&reg;</sup>--></h1>
+      <h1>Luckitea</h1>
 
       <nav>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu>
           <li><a href="index.html">Home</a></li>
            <li><a href="mainScreen.html">Try Your Luck</a></li>
           <li><a href="meters.html">Luck Meter</a></li>
-          <li><a href="info.html">Info</a></li> 
+          <li><a href="about.html">Info</a></li> 
         </menu>
       </nav>
 
@@ -26,23 +22,20 @@
     </header>
 
     <main>
-      <div id="picture" class="picture-box"><img width="400px" src="placeholder.jpg" alt="random" /></div>
-
+      <div>
+        <!--Image to go here, depicting curtains-->
+      </div>
       <p>
         Luckitea is based on the shell game. However, it is also mixed with the idea of the fortune cookie. Instead of 
-        guessing which cup is hiding something luckitea gives you the chance to pick a random "fortune". These fortunes
+        guessing which cup is hiding a marbel, Luckitea gives you the chance to pick a random "fortune". These fortunes
         are given in the form of luck.
       </p>
 
       <p>
-        The name Simon is a registered trademark of Milton-Bradley. Our use of the name and the game is for non-profit
-        educational use only. No part of this code or program should be used outside of that definition.
+        Disclaimer: This game has no effect on actual circumstances and is for coding educational practice.
       </p>
 
-      <div id="quote">
-        <div>Words are cheap. Show me the code.</div>
-        <div>- Linus Torvalds</div>
-      </div>
+
     </main>
 
     <footer>
