--- a/Luckitea_html/mainScreen.html
+++ b/Luckitea_html/mainScreen.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luckitea HTML</title>
+    <link rel="stylesheet" href="../Luckitea_css/main_style.css">
   </head>
   <body>
     <header>
