changed github url

--- a/info.html
+++ b/info.html
@@ -42,7 +42,7 @@
         <hr />
         <span class="text-reset">Huny17</span>
         <br />
-        <a href="https://github.com/huny17/startup/index-html">GitHub</a>
+        <a href="https://github.com/huny17/startup">GitHub</a>
     </footer>
   </body>
 </html>
