--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <hr />
       <span class="text-reset">Huny17</span>
       <br />
-      <a href="https://github.com/huny17/startup/index-html">GitHub</a>
+      <a href="https://github.com/huny17/startup">GitHub</a>
     </footer>
   </body>
 </html>
