--- a/mainScreen.html
+++ b/mainScreen.html
@@ -77,7 +77,7 @@
       <hr />
       <span class="text-reset">huny17</span>
       <br />
-      <a href="https://github.com/huny17/startup/index-html">GitHub</a>
+      <a href="https://github.com/huny17/startup">GitHub</a>
     </footer>
   </body>
 </html>
