--- a/Luckitea_html/mainScreen.html
+++ b/Luckitea_html/mainScreen.html
@@ -5,10 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luckitea HTML</title>
     <link rel="stylesheet" href="../Luckitea_css/main_style.css">
-  </head>
-  <body>
-    <header>
-      <h1>Luckitea</h1>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"crossorigin="anonymous"/>
+    </head>
+    <body>
+        <header>
+      <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+          <h1>Luckitea</h1>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
 
       <nav>
         <menu>
@@ -50,23 +63,30 @@
         <table>
           <tr>
             <td>
-              <button>
                 <!-- <img src=""> -->
+                <button onclick="alert('Button clicked!')">
+                  <img src="../teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
+                  </button>
+                </div>
                 <!--I'm planning on drawing some cups to go here for buttons to press-->
                 </svg>
               </button>
             </td>
             <td>
-              <button>
-                <!-- <img src=""> -->
+              <!-- <img src=""> -->
+              <button onclick="alert('Button clicked!')">
+                  <img src="../teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
+                  </button>
+                </div>
                 <!--I'm planning on drawing some cups to go here for buttons to press-->
               </button>
             </td>
             <td>
-              <button>
-                <!-- <img src=""> -->
+              <button onclick="alert('Button clicked!')">
+                <img src="../teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
+                </button>
+                </div>
                 <!--I'm planning on drawing some cups to go here for buttons to press-->
-              </button>
             </td>
           </tr>
         </table>
