trying to fix nav

--- a/Luckitea_css/mainScreen.html
+++ b/Luckitea_css/mainScreen.html
@@ -65,7 +65,7 @@
             <td>
                 <!-- <img src=""> -->
                 <button onclick="alert('Button clicked!')">
-                  <img src="teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
+                  <img src="../teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
                   </button>
                 </div>
                 <!--I'm planning on drawing some cups to go here for buttons to press-->
@@ -75,7 +75,7 @@
             <td>
               <!-- <img src=""> -->
               <button onclick="alert('Button clicked!')">
-                  <img src="teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
+                  <img src="../teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
                   </button>
                 </div>
                 <!--I'm planning on drawing some cups to go here for buttons to press-->
@@ -83,7 +83,7 @@
             </td>
             <td>
               <button onclick="alert('Button clicked!')">
-                <img src="teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
+                <img src="../teaCup.png" alt="Teacup" style="width: 100px; height: 135px;">
                 </button>
                 </div>
                 <!--I'm planning on drawing some cups to go here for buttons to press-->
