--- a/Luckitea_css/info.html
+++ b/Luckitea_css/info.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luckitea HTML</title>
-
+    <link rel="stylesheet" href="../Luckitea_css/main_style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"crossorigin="anonymous"/>
-
-        <link rel="stylesheet" href="../Luckitea_css/main_style.css">      
     </head>
     <body>
         <header>
@@ -35,30 +33,31 @@
         </menu>
       </nav>
 
-      <hr /> 
+      <hr />
     </header>
 
     <main>
-      <h1>Login</h1>
-      <form method="get" action="play.html">
-        <div>
-          <span>Email</span>
-          <input type="text" placeholder="123@email.com" />
-        </div>
-        <div>
-          <span>🔒</span>
-          <input type="password" placeholder="password" />
-        </div>
-        <button type="submit">Login</button>
-        <button type="submit">Create</button>
-      </form>
+      <div>
+        <!--Image to go here, depicting curtains-->
+      </div>
+      <p>
+        Luckitea is based on the shell game. However, it is also mixed with the idea of the fortune cookie. Instead of 
+        guessing which cup is hiding a marbel, Luckitea gives you the chance to pick a random "fortune". These fortunes
+        are given in the form of luck.
+      </p>
+
+      <p>
+        Disclaimer: This game has no effect on actual circumstances and is for coding educational practice.
+      </p>
+
+
     </main>
 
     <footer>
-      <hr />
-      <span class="text-reset">Huny17</span>
-      <br />
-      <a href="https://github.com/huny17/startup">GitHub</a>
+        <hr />
+        <span class="text-reset">Huny17</span>
+        <br />
+        <a href="https://github.com/huny17/startup">GitHub</a>
     </footer>
   </body>
 </html>
