--- a/Luckitea_css/luckMeter.html
+++ b/Luckitea_css/luckMeter.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Luckitea HTML</title>
-
+    <link rel="stylesheet" href="../Luckitea_css/main_style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"crossorigin="anonymous"/>
-
-        <link rel="stylesheet" href="../Luckitea_css/main_style.css">      
     </head>
     <body>
         <header>
@@ -35,23 +33,32 @@
         </menu>
       </nav>
 
-      <hr /> 
+      <hr />
     </header>
 
     <main>
-      <h1>Login</h1>
-      <form method="get" action="play.html">
-        <div>
-          <span>Email</span>
-          <input type="text" placeholder="123@email.com" />
-        </div>
-        <div>
-          <span>🔒</span>
-          <input type="password" placeholder="password" />
-        </div>
-        <button type="submit">Login</button>
-        <button type="submit">Create</button>
-      </form>
+      <table>
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Luck</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Player 1</td>
+            <td>Luck: 56</td>
+          </tr>
+          <tr>
+            <td>Player 2</td>
+            <td>Luck: 13</td>
+          </tr>
+          <tr>
+            <td>Player 3</td>
+            <td>Luck: -5</td>
+          </tr>
+        </tbody>
+      </table>
     </main>
 
     <footer>
@@ -61,4 +68,5 @@
       <a href="https://github.com/huny17/startup">GitHub</a>
     </footer>
   </body>
+</html>
 </html>
