--- a/Luckitea_css/index.html
+++ b/Luckitea_css/index.html
@@ -39,11 +39,11 @@
     <main>
       <h1>Login</h1>
       <form method="get" action="play.html">
-        <div>
+        <div class="container">
           <span>Email</span>
           <input type="text" placeholder="123@email.com" />
         </div>
-        <div>
+        <div class="container">
           <span>🔒</span>
           <input type="password" placeholder="password" />
         </div>
